Fixed erros in guitar and subscription models and admin views with Foreign Key and correcting integer (from string) format for number of frets

--- a/templates/base.html
+++ b/templates/base.html
@@ -129,7 +129,7 @@
                             <!--Temporary icon - to be replaced with SVG matching membership tier + counter for picks available-->
                             <i class="fas fa-map-marker fa-2x"></i>
                           </div>
-                          <p class="my-0">
+                          <p class="my-0 text-center">
                             {% if picks_total %}
                               {{ picks_total }}
                             {% else %}
