--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,10 +15,10 @@
     <div class="container h-100">
         <div class="row">
             <div class="col main-content mt-1">
-                <h1 class="gold-special-txt mb-5">Welcome to the Guitar Vault</h1>
-                <div class="d-flex pb-2">
+                <h1 class="gold-special-txt mt-2 mb-5">Welcome to the Guitar Vault</h1>
+                <div class="d-flex justify-content-evenly pb-2">
                     <a href="{% url 'subscriptions' %}" class="btn btn-lg btn-gold-outline">New? View our subscription plans</a>
-                    <a href="{% url 'guitars' %}" class="btn btn-lg btn-gold-outline ms-auto">Take a peek inside the vault!</a>
+                    <a href="{% url 'guitars' %}" class="btn btn-lg btn-gold-outline">Take a peek inside the vault!</a>
                 </div>
             </div>      
         </div>          <!--Close Welcome row-->
