Created checkout app, and installed cripsy-forms (bootstrap5 version)

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -15,9 +15,9 @@
     <div class="container h-100">
         <div class="row">
             <div class="col mt-2">
-                <h1 class="gold-special-txt text-center mb-3">Shopping Bag</h1>
+                <h1 class="gold-special-txt text-center mb-3">Payment</h1>
             </div>      
-        </div>          <!--Close Welcome row-->
+        </div>          
 
         <div class="row">
             <div class="col-12 col-md-6 offset-md-3 main-content mt-2 my-auto">
@@ -53,7 +53,7 @@
                                 </div>
                                 
                                 <div class="col-10 offset-1 col-md-6 offset-md-0">
-                                    <a class="btn btn-gold-outline" type="button" href="{% url 'checkout' %}">
+                                    <a class="btn btn-gold-outline" type="button" href="">
                                         <span><i class="fas fa-credit-card"></i></span>
                                         <span class="ps-2">Proceed to Payment</span>
                                     </a>
