--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -15,57 +15,38 @@
     <div class="container h-100">
         <div class="row">
             <div class="col mt-2">
-                <h1 class="gold-special-txt text-center mb-3">Payment</h1>
+                {% if request.user.is_authenticated %}
+                    <h1 class="gold-special-txt text-center mb-3">Payment</h1>
+                {% else %}
+                    <h1 class="gold-special-txt text-center mb-3">Login / Create Account to Continue</h1>
+                {% endif %}
             </div>      
         </div>          
 
         <div class="row">
             <div class="col-12 col-md-6 offset-md-3 main-content mt-2 my-auto">
-
-                {% if bag_items %}
-                    <div class="row">
-                        <div class="col-12">
-                            <p class="mt-3 lead">Thank you for choosing to join Guitar Vault.</p>
-                            <p>Your chosen plan is shown below;</p>     
-                            {% for item in bag_items %}
-                                
-                                <div class="d-flex flex-row">
-                                    <p class="col-6">Subscription Tier:</p>
-                                    <p class="col-6">{{ item.subscription }}</p>
-                                </div>
-                                <div class="d-flex flex-row">
-                                    <p class="col-6">Monthly Fee:</p>
-                                    <p class="col-6">£{{ item.subscription.price }}</p>
-                                </div>
-                            {% endfor %}
+                {% if request.user.is_authenticated %}
+                    <!--REMINDER: After creating profile add section to offer change subscription plan if existing user-->
+                    <div class="lead">Welcome back [USERNAME]<!--REMINDER: insert django tag to insert username here-->!</div>
+                {% else %}
+                    <div class="row pt-2">
+                        <div class="col-6 d-flex flex-column">
+                            <div class="lead text-center">If you have an existing account please log-in.</div>
+                            <a class="btn btn-gold-outline mt-auto" type="button" href="{% url 'account_login' %}">
+                                <span class="ps-2">Log-In</span>
+                            </a>
+                            
                         </div>
-                    </div>  
-                       
-                    
-                    <div class="row">
-                        <div class="col-12 justify-content-evenly mt-2 pb-3">
-                            <div class="row">
-                                <div class="col-10 offset-1 col-md-6 offset-md-0 mb-2">
-                                    <a class="btn btn-outline-secondary" type="button" href="{% url 'subscriptions' %}">
-                                        <i class="fas fa-angle-left"></i>
-                                        <span class="mx-2">Switch to Another Plan</span>
-                                    </a>
-                                </div>
-                                
-                                <div class="col-10 offset-1 col-md-6 offset-md-0">
-                                    <a class="btn btn-gold-outline" type="button" href="">
-                                        <span><i class="fas fa-credit-card"></i></span>
-                                        <span class="ps-2">Proceed to Payment</span>
-                                    </a>
-                                </div>
-                            </div>
+                        <div class="col-6 d-flex flex-column">
+                            <div class="lead text-center ">Otherwise, please create an account to proceed with your order.</div>
+                            <a class="btn btn-gold-outline mt-auto" type="button" href="{% url 'account_signup' %}">
+                                <span class="ps-2">Create Account</span>
+                            </a>
                         </div>
                     </div>
-
-                {% else %}
-                    <p class="lead mt-5"> You have not added anything to your bag</p>
-                    <a href="{% url 'subscriptions' %}" class="btn btn-gold-outline">View our subscription plans</a>
                 {% endif %}
+                    
+               
             </div> 
         </div>                 
     </div> <!--close main container-->
