checkout.html core structure added, also refinements to guitardetails.html to only show action buttons if user authenticated

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -24,10 +24,74 @@
         </div>          
 
         <div class="row">
-            <div class="col-12 col-md-6 offset-md-3 main-content mt-2 my-auto">
+            <div class="col-12 col-md-6 offset-md-3 main-content mt-2 my-auto py-2">
                 {% if request.user.is_authenticated %}
                     <!--REMINDER: After creating profile add section to offer change subscription plan if existing user-->
-                    <div class="lead">Welcome back [USERNAME]<!--REMINDER: insert django tag to insert username here-->!</div>
+                    <h4 class="gold-txt">Welcome back [USERNAME]<!--REMINDER: insert django tag to insert username here-->!</h4>
+                                        
+                    <!--Subscription Plan-->
+                    <div class="row">
+                        <div class="col-12">
+                            <hr>
+                            <div class="row">
+                                <div class="col-4">
+                                    <p class="checkout-label">Your Order</p>
+                                </div>
+                                <div class="col-8">
+                                    {% for item in bag_items %}
+                                        <div class="d-flex flex-row">
+                                            <p class="col-6 text-end">Subscription Tier:</p>
+                                            <p class="col-6 text-start ps-2">{{ item.subscription }}</p>
+                                        </div>
+                                        <div class="d-flex flex-row">
+                                            <p class="col-6 text-end">Monthly Fee:</p>
+                                            <p class="col-6 text-start ps-2">£{{ item.subscription.price }}</p>
+                                        </div>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <p>Please complete your subscription details below</p>
+                    <form action="{% url 'checkout' %}" method="POST" id="payment-form">
+                        {% csrf_token %}
+                        
+                        <!--User's Details-->
+                        <div class="row">
+                            <div class="col-4">
+                                <fieldset class="px-2 mx-2">
+                                    <legend class="fieldset-label">Your Details</legend>
+                            </div>
+                            <div class="col-8">
+                                    {{ order_form.full_name | as_crispy_field }}
+                                    {{ order_form.email | as_crispy_field }}
+                                    {{ order_form.phone_number | as_crispy_field }}
+                                </fieldset>
+                            </div>
+                        </div>
+
+                        <hr>
+
+                        <!--User's Address-->
+                        <div class="row">
+                            <div class="col-4">
+                                <fieldset class="px-2 mx-2">
+                                    <legend class="fieldset-label">Address</legend>
+                            </div>
+                            <div class="col-8">
+                                    {{ order_form.street_address1 | as_crispy_field }}
+                                    {{ order_form.street_address2 | as_crispy_field }}
+                                    {{ order_form.town_or_city | as_crispy_field }}
+                                    {{ order_form.postcode | as_crispy_field }}
+                                    {{ order_form.county | as_crispy_field }}
+                                    {{ order_form.country | as_crispy_field }}
+                                    <!--REMINDER - add JS to show warning message below if not UK-->
+                                    <p id="UK-only-txt" class="text-danger d-none"><em>Sorry, but this service is currently only available in UK</em></p>
+                                </fieldset>
+                            </div>
+                        </div>
+                    </form>
                 {% else %}
                     <div class="row pt-2">
                         <div class="col-6 d-flex flex-column">
