--- a/guitars/templates/guitars/guitar_detail.html
+++ b/guitars/templates/guitars/guitar_detail.html
@@ -81,48 +81,50 @@
                             <!-- Actions -->
                             <div class="col-6">
                                 <div class="row">
-                                    <ul class="list-inline list-unstyled d-flex justify-content-evenly align-items-baseline">
-                                        <li class="list-inline-item w-20 pb-0 ">
-                                            <!--Reminder - once profiles created add JS to toggle display of favourite / remove favourite button-->
-                                            
-                                            <!--option A : Add Favourite -->
-                                            <btn type="button" class="btn btn-sm btn-add-fav align-baseline">
-                                                <i class="far fa-heart fa-2x"></i>
-                                                <p class="pb-0"><small>Add Favourite</small></p>
-                                            </btn>
-                                            
-                                            <!--option B : Remove Favourite -->
-                                            <btn type="button" class="btn btn-sm d-none btn-remove-fav align-baseline">
-                                                <i class="fas fa-heart fa-2x"></i>
-                                                <p class="ps-2"><small>Remove Favourite</small></p>
-                                            </btn>
-                                        </li>
+                                    {% if request.user.is_authenticated %}
+                                        <ul class="list-inline list-unstyled d-flex justify-content-evenly align-items-baseline">
+                                            <li class="list-inline-item w-20 pb-0 ">
+                                                <!--Reminder - once profiles created add JS to toggle display of favourite / remove favourite button-->
+                                                
+                                                <!--option A : Add Favourite -->
+                                                <btn type="button" class="btn btn-sm btn-add-fav align-baseline">
+                                                    <i class="far fa-heart fa-2x"></i>
+                                                    <p class="pb-0"><small>Add Favourite</small></p>
+                                                </btn>
+                                                
+                                                <!--option B : Remove Favourite -->
+                                                <btn type="button" class="btn btn-sm d-none btn-remove-fav align-baseline">
+                                                    <i class="fas fa-heart fa-2x"></i>
+                                                    <p class="ps-2"><small>Remove Favourite</small></p>
+                                                </btn>
+                                            </li>
 
-                                        <li class="list-inline-item w-20 pb-0 align-baseline">
-                                            <!--REMINDER - once profile complete switch between add / remove icon-->
+                                            <li class="list-inline-item w-20 pb-0 align-baseline">
+                                                <!--REMINDER - once profile complete switch between add / remove icon-->
 
-                                            <!--option A : Add to Rack -->
-                                            <btn type="button" class="btn btn-sm btn-take align-baseline">
-                                                <!--Temporary image src to be updated with correct Media links-->
-                                                <img src="/media/Guitar_gold_add.svg" class="guitar-svg add-gold">
-                                                <img src="/media/Guitar_black_add.svg" class="guitar-svg add-black">
-                                                <p class=""><small>Add to Rack</small></p>
-                                            </btn>
+                                                <!--option A : Add to Rack -->
+                                                <btn type="button" class="btn btn-sm btn-take align-baseline">
+                                                    <!--Temporary image src to be updated with correct Media links-->
+                                                    <img src="/media/Guitar_gold_add.svg" class="guitar-svg add-gold">
+                                                    <img src="/media/Guitar_black_add.svg" class="guitar-svg add-black">
+                                                    <p class=""><small>Add to Rack</small></p>
+                                                </btn>
 
-                                            <!--option B : Remove from Rack -->
-                                            <btn type="button" class="btn btn-sm btn-take d-none align-baseline">
-                                                <!--Temporary image src to be updated with correct Media links-->
-                                                <img src="/media/Guitar_gold_remove.svg" class="guitar-svg add-gold">
-                                                <img src="/media/Guitar_black_remove.svg" class="guitar-svg add-black">
-                                                <p class="ps-2"><small>Remove from Rack</small></p>
-                                            </btn>
-                                        </li>
-                                    </ul>
+                                                <!--option B : Remove from Rack -->
+                                                <btn type="button" class="btn btn-sm btn-take d-none align-baseline">
+                                                    <!--Temporary image src to be updated with correct Media links-->
+                                                    <img src="/media/Guitar_gold_remove.svg" class="guitar-svg add-gold">
+                                                    <img src="/media/Guitar_black_remove.svg" class="guitar-svg add-black">
+                                                    <p class="ps-2"><small>Remove from Rack</small></p>
+                                                </btn>
+                                            </li>
+                                        </ul>
+                                    {% endif %}
                                 </div>
-
+                            
                                 <div class="row">
                                     <div class="col-12 ms-2">
-                                        <div class="my-2">Words from the owner;</div>
+                                        <div class="my-2">What we love;</div>
                                         
                                         <div class="gold-txt lg-txt">
                                             <i class="gold-txt fas fa-quote-left" data-fa-transform="up-5"></i>
