--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
         <!--Fonts-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Varta&family=Lobster&display=swap" rel="stylesheet">
         <!--Base.css-->
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% endblock %}
