Adding stripe functionality

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -108,7 +108,7 @@
                                 <!-- Stripe field -->
                                 <div id="card-element"></div>
                                 <!-- Payment Error messages -->
-                                <div id="card-errors text-danger" role="alert">
+                                <div id="card-errors" class="text-danger text-start mt-1" role="alert">
                                 </div>
 
                                 <!--Form Action Buttons-->
