Added basic checkout functionality. O/s BUG: Whilst payment successfully received by Stripe, there is no form reset or  indication to user

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -122,7 +122,7 @@
 
                                     <!-- Submit Button -->
                                     <div class="col-10 offset-1 col-md-6 offset-md-0">
-                                        <button id="submit-button" class="btn btn-success btn-lg w-100" type="button" href="{% url 'checkout' %}">
+                                        <button id="submit-button" class="btn btn-success btn-lg w-100">
                                             <span>Submit</span>
                                         </button>
                                     </div>
