Bug fixed (with the aid of Sean, Tutor Support) to get the subscription plan added to the order

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -46,7 +46,11 @@
                                             <div class="d-flex flex-row">
                                                 <p class="col-6 text-end">Subscription Tier:</p>
                                                 <p class="col-6 text-start ps-2">{{ item.subscription | upper }}</p>
+                                                
                                             </div>
+                                            
+                                            <input type="hidden" name="subscription_plan" value="{{ item.subscription_id }}"></input>
+
                                             <div class="d-flex flex-row">
                                                 <p class="col-6 text-end">Monthly Fee:</p>
                                                 <p class="col-6 text-start ps-2">£{{ item.subscription.price }}</p>
