Added price to checkout form (as hidden field) and included in the form and order being saved

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -49,12 +49,15 @@
                                                 
                                             </div>
                                             
-                                            <input type="hidden" name="subscription_plan" value="{{ item.subscription_id }}"></input>
-
                                             <div class="d-flex flex-row">
                                                 <p class="col-6 text-end">Monthly Fee:</p>
                                                 <p class="col-6 text-start ps-2">£{{ item.subscription.price }}</p>
                                             </div>
+                                            
+                                            <!-- Hidden input fields which take their values from the bag for inclusion in the form submission / order -->
+                                            <input type="hidden" name="subscription_plan" value="{{ item.subscription_id }}"></input>
+                                            
+                                            <input type="hidden" name="subscription_price" value="{{ item.subscription.price }}"></input>
                                         {% endfor %}
                                     </div>
                                 </div>
