--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -21,7 +21,49 @@
 
         <div class="row">
             <div class="col-12 col-md-8 offset-md-2 main-content mt-2 my-auto py-2">
-               <p>Thank you for subscribing to Guitar Vault.Your order information is shown below</p>
+                <p class="lead">{{order.full_name}}, thank you for subscribing to Guitar Vault!</p>
+                <p>Your order conformation is shown below:</p>
+
+                
+               <div class="row">
+                    <div class="col-4">
+                        <p class="checkout-label">Your Order</p>
+                    </div>
+                    <div class="col-8 pe-4">
+                            <div class="d-flex flex-row">
+                                <p class="col-6 text-end">Order Number:</p>
+                                <p class="col-6 text-start ps-2">{{order.order_number }}</p>                
+                            </div>
+                            
+                            <div class="d-flex flex-row">
+                                <p class="col-6 text-end">Subscription Tier:</p>
+                                <p class="col-6 text-start ps-2">{{ order.subscription_plan | upper }}</p>
+                            </div>
+
+                            <div class="d-flex flex-row">
+                                <p class="col-6 text-end">Monthly Fee:</p>
+                                <p class="col-6 text-start ps-2">£{{ order.subscription_price }}</p>
+                            </div>
+                    </div>
+                </div>
+
+                <hr>
+
+                <div class="row">
+                    <div class="col-4">
+                        <p class="checkout-label">Your Details</p>
+                    </div>
+                    <div class="col-8 pe-4">
+                            <div class="d-flex flex-row">
+                                <p class="col-6 text-end">Email:</p>
+                                <p class="col-6 text-start ps-2">{{order.email }}</p>                
+                            </div>
+                            
+
+                    </div>
+                </div>
+
+
             </div> 
         </div>                 
     </div> <!--close main container-->
