Added further content to the checkout-success.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -86,7 +86,7 @@
                           <li><a class="dropdown-item gold-accent-txt" href="">
                             Site Admin</a></li>
                         {% endif %}  
-                        <li><a class="dropdown-item gold-accent-txt" href="#">
+                        <li><a class="dropdown-item gold-accent-txt" href="">
                           My Profile</a></li>
                         <li><a class="dropdown-item gold-accent-txt" href="{% url 'account_logout' %}">
                           Log Out</a></li>
