--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -21,28 +21,28 @@
 
         <div class="row">
             <div class="col-12 col-md-8 offset-md-2 main-content mt-2 my-auto py-2">
-                <p class="lead">{{order.full_name}}, thank you for subscribing to Guitar Vault!</p>
+                <p class="lead py-2 gold-txt">{{order.full_name}}, thank you for subscribing to Guitar Vault!</p>
                 <p>Your order conformation is shown below:</p>
 
                 
                <div class="row">
-                    <div class="col-4">
+                    <div class="col-3">
                         <p class="checkout-label">Your Order</p>
                     </div>
-                    <div class="col-8 pe-4">
+                    <div class="col-9 pe-4">
                             <div class="d-flex flex-row">
-                                <p class="col-6 text-end">Order Number:</p>
-                                <p class="col-6 text-start ps-2">{{order.order_number }}</p>                
+                                <p class="col-3 text-end">Order Number:</p>
+                                <p class="col-9 text-start ps-2">{{order.order_number }}</p>                
                             </div>
                             
                             <div class="d-flex flex-row">
-                                <p class="col-6 text-end">Subscription Tier:</p>
-                                <p class="col-6 text-start ps-2">{{ order.subscription_plan | upper }}</p>
+                                <p class="col-3 text-end">Subscription Tier:</p>
+                                <p class="col-9 text-start ps-2">{{ order.subscription_plan | upper }}</p>
                             </div>
 
                             <div class="d-flex flex-row">
-                                <p class="col-6 text-end">Monthly Fee:</p>
-                                <p class="col-6 text-start ps-2">£{{ order.subscription_price }}</p>
+                                <p class="col-3 text-end">Monthly Fee:</p>
+                                <p class="col-9 text-start ps-2">£{{ order.subscription_price }}</p>
                             </div>
                     </div>
                 </div>
@@ -50,20 +50,65 @@
                 <hr>
 
                 <div class="row">
-                    <div class="col-4">
+                    <div class="col-3">
                         <p class="checkout-label">Your Details</p>
                     </div>
-                    <div class="col-8 pe-4">
+                    <div class="col-9 pe-4">
                             <div class="d-flex flex-row">
-                                <p class="col-6 text-end">Email:</p>
-                                <p class="col-6 text-start ps-2">{{order.email }}</p>                
+                                <p class="col-3 text-end">Email:</p>
+                                <p class="col-9 text-start ps-2">{{order.email }}</p>                
                             </div>
-                            
-
+                            <div class="d-flex flex-row">
+                                <p class="col-3 text-end">Phone:</p>
+                                <p class="col-9 text-start ps-2">{{order.phone_number }}</p>                
+                            </div>
+                            <div class="d-flex flex-row">
+                                <p class="col-3 text-end">Adress:</p>
+                                <p class="col-9 text-start ps-2">{{order.street_address1 }}<br>
+                                    {{order.street_address2 }}<br>
+                                    {{ order.town_or_city }}<br>
+                                    {{ order.county }}<br>
+                                    {{ order.postcode }}<br>
+                                </p>                
+                            </div>
                     </div>
                 </div>
 
+                <hr>
 
+                <div class="row">
+                    <div class="col-3">
+                        <p class="checkout-label">What Next?</p>
+                    </div>
+                    <div class="col-9">
+                        <div class="row">
+                            <div class="col-6">
+                                <p>Head straight into the Guitar Vault and make your first selection!</p>
+                            </div>
+                            <div class="col-6">
+                                <a href="{% url 'guitars' %}" class="btn btn-lg btn-gold-outline">Enter the vault</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 mt-5">
+                            <p class="text-muted px-2 text-start">
+                                You can manage your account (including your address and subscription plan) via the 'My Account' link shown at the top of the screen.
+                            </p>
+                            <!--REMINDER ADD URL LINKS TO PROFILE / FAQ and CONTACT Pages-->
+                            <p class="text-muted px-2 text-start">
+                                If you have any questions, please refer to our 
+                                <a href="" class="ivory-txt gold-accent-txt">
+                                    FAQ page
+                                </a>
+                                or 
+                                <a href="" class="ivory-txt gold-accent-txt">
+                                    Contact Us
+                                </a> for assistance.
+                            </p>
+                        </div>
+                    </div>
+                </div>
             </div> 
         </div>                 
     </div> <!--close main container-->
