--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
     {% block corejs %}
         <!-- Font Awesome -->
         <script src="https://kit.fontawesome.com/d01fd203b5.js" crossorigin="anonymous"></script>
-        <!--Additional FontAwesome JS to enable 'stacking' feature-->
+        <!-- Additional FontAwesome JS to enable 'stacking' feature-->
         <script defer src="https://use.fontawesome.com/releases/v5.15.0/js/all.js"></script>
         <!-- Bootstrap -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -38,6 +38,8 @@
         <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
         <!-- Stripe -->
         <script src="https://js.stripe.com/v3/"></script>
+        <!-- Local Script -->
+        <script src="{% static 'js/script.js' %}"></script>
     {% endblock %}
 
     {% block extra_js %}
