Added Favicon, also adjusted existing media links which were not using the correct media url tag

--- a/guitars/templates/guitars/guitar_detail.html
+++ b/guitars/templates/guitars/guitar_detail.html
@@ -104,17 +104,15 @@
 
                                                 <!--option A : Add to Rack -->
                                                 <btn type="button" class="btn btn-sm btn-take align-baseline">
-                                                    <!--Temporary image src to be updated with correct Media links-->
-                                                    <img src="/media/Guitar_gold_add.svg" class="guitar-svg add-gold">
-                                                    <img src="/media/Guitar_black_add.svg" class="guitar-svg add-black">
+                                                    <img src="{{ MEDIA_URL }}Guitar_gold_add.svg" class="guitar-svg add-gold">
+                                                    <img src="{{ MEDIA_URL }}Guitar_black_add.svg" class="guitar-svg add-black">
                                                     <p class=""><small>Add to Rack</small></p>
                                                 </btn>
 
                                                 <!--option B : Remove from Rack -->
                                                 <btn type="button" class="btn btn-sm btn-take d-none align-baseline">
-                                                    <!--Temporary image src to be updated with correct Media links-->
-                                                    <img src="/media/Guitar_gold_remove.svg" class="guitar-svg add-gold">
-                                                    <img src="/media/Guitar_black_remove.svg" class="guitar-svg add-black">
+                                                    <img src="{{ MEDIA_URL }}Guitar_gold_remove.svg" class="guitar-svg add-gold">
+                                                    <img src="{{ MEDIA_URL }}Guitar_black_remove.svg" class="guitar-svg add-black">
                                                     <p class="ps-2"><small>Remove from Rack</small></p>
                                                 </btn>
                                             </li>
