Attempted to add backgrund image outside of main container, backed out as affecting main column although images remian added to media file for now

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -224,6 +224,12 @@ body {
 
 /*---Index.html-------------------------------------------*/
 
+.main-left-img {
+    background: url('/media/Guitar_background-50px.png') no-repeat center left fixed; 
+    width:20vw;
+    overflow:none;
+}
+
 .main-content {
 
     min-height:20vh;
