--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -103,7 +103,7 @@
 
         <div class="row">
             <!-- About-->
-            <div class="col-12 col-md-guttered main-content mt-2">
+            <div class="col-12 col-md-guttered main-content my-2">
                 <div class="col-12">
                     <h1 class="gold-special-txt my-4">About Guitar Vault</h1>
                     <div class="row mb-4">
@@ -129,7 +129,7 @@
             <div class="d-none d-md-block col-md-gutter"></div>
 
             <!--Users Poll-->
-            <div class="col-12 col-md-guttered main-content mt-2">
+            <div class="col-12 col-md-guttered main-content my-2">
                 <div class="col-12">
                     {% if request.user.is_authenticated %}
                         <h1 class="gold-special-txt my-4">How Are We Doing?</h1>
