Added missing order date field to echeckout success page

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -34,6 +34,11 @@
                                 <p class="col-3 text-end">Order Number:</p>
                                 <p class="col-9 text-start ps-2">{{order.order_number }}</p>                
                             </div>
+
+                            <div class="d-flex flex-row">
+                                <p class="col-3 text-end">Date Purchased:</p>
+                                <p class="col-9 text-start ps-2">{{ order.date }}</p>
+                            </div>
                             
                             <div class="d-flex flex-row">
                                 <p class="col-3 text-end">Subscription Tier:</p>
@@ -69,6 +74,7 @@
                                     {{ order.town_or_city }}<br>
                                     {{ order.county }}<br>
                                     {{ order.postcode }}<br>
+                                    
                                 </p>                
                             </div>
                     </div>
