--- a/static/css/base.css
+++ b/static/css/base.css
@@ -425,3 +425,13 @@ body {
 .stripe-style-input::placeholder {
     color: #aab7c4;
 }
+
+select,
+select option {
+    color:#000000;
+}
+
+select:invalid,
+select option[value=""] {
+    color: #aab7c4 !important;
+}
