--- a/templates/base.html
+++ b/templates/base.html
@@ -176,6 +176,12 @@
     {% endif %}
 
     {% block page_header %}
+        <!--Empty container to push body content below nav bars-->
+        <div class="container header-container">
+          <div class="row">
+              <div class="col"></div>
+          </div>
+      </div>
     {% endblock %}
 
     {% block content %}
